--- a/.github/workflows/docker-deployment.yml
+++ b/.github/workflows/docker-deployment.yml
@@ -4,42 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    name: Build
-    environment: littlecrochet
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
-      - name: Gradle build
-        env:
-          ENV: ${{ vars.ENV }}
-          DB_URL: ${{ vars.DB_URL }}
-          DATABASE_USERNAME: ${{ vars.DATABASE_USERNAME }}
-          DATABASE_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-          TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
-          APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
-          GITHUB_ACTOR: ${{ secrets.GIT_ACTOR }}
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          PAYPAL_CLIENT_ID: ${{ secrets.PAYPAL_CLIENT_ID }}
-          PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
-        run: |
-          chmod +x gradlew
-          ./gradlew build
   docker:
-    needs: build
     runs-on: ubuntu-latest
     name: Build & push Docker image
     environment: littlecrochet
@@ -58,6 +23,9 @@ jobs:
         uses: docker/build-push-action@v5
         id: docker_build
         with:
+          build-args: |
+            GITHUB_ACTOR=${{ secrets.GIT_ACTOR }}
+            GITHUB_TOKEN=${{ secrets.GIT_TOKEN }}
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/crochet:latest
