--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
-    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'com.mysql:mysql-connector-j:8.3.0'
     implementation 'org.liquibase:liquibase-core:4.23.0'
     implementation 'com.h2database:h2:2.2.220'
     implementation 'org.postgresql:postgresql:42.2.27'
@@ -48,7 +48,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    implementation 'com.google.firebase:firebase-admin:7.0.1'
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.2.0'
@@ -61,7 +61,7 @@ dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-core:4.23.0'
     liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.3'
     liquibaseRuntime 'info.picocli:picocli:4.7.4'
-    liquibaseRuntime 'mysql:mysql-connector-java:8.0.33'
+    liquibaseRuntime 'com.mysql:mysql-connector-j:8.3.0'
 }
 
 liquibase {
@@ -80,6 +80,6 @@ jar {
     enabled = false
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
