--- a/build.gradle
+++ b/build.gradle
@@ -31,10 +31,12 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
-    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'com.mysql:mysql-connector-j:8.3.0'
     implementation 'org.liquibase:liquibase-core:4.23.0'
     implementation 'com.h2database:h2:2.2.220'
     implementation 'org.postgresql:postgresql:42.2.27'
+
+    implementation 'com.paypal.sdk:checkout-sdk:2.0.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -46,13 +48,12 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-    implementation 'com.google.firebase:firebase-admin:7.0.1'
+    implementation 'com.google.firebase:firebase-admin:9.2.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.2.0'
     testImplementation 'org.mockito:mockito-core:5.7.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.12.0")
 
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -60,14 +61,14 @@ dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-core:4.23.0'
     liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.3'
     liquibaseRuntime 'info.picocli:picocli:4.7.4'
-    liquibaseRuntime 'mysql:mysql-connector-java:8.0.33'
+    liquibaseRuntime 'com.mysql:mysql-connector-j:8.3.0'
 }
 
 liquibase {
     activities {
         main {
             changelogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
-            url 'jdbc:mysql://localhost:3307/testDB'
+            url 'jdbc:mysql://localhost:3306/testDB'
             username 'root'
             password 'root'
         }
@@ -79,6 +80,6 @@ jar {
     enabled = false
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
