--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 
-    implementation 'com.mysql:mysql-connector-j:8.3.0'
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
     implementation 'org.liquibase:liquibase-core:4.27.0'
     implementation 'com.h2database:h2:2.2.220'
     implementation 'org.postgresql:postgresql:42.7.3'
@@ -66,7 +66,7 @@ dependencies {
     liquibaseRuntime 'org.liquibase:liquibase-core:4.27.0'
     liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.3'
     liquibaseRuntime 'info.picocli:picocli:4.7.4'
-    liquibaseRuntime 'com.mysql:mysql-connector-j:8.3.0'
+    liquibaseRuntime 'com.mysql:mysql-connector-j:8.4.0'
     liquibaseRuntime 'org.postgresql:postgresql:42.7.3'
 }
 
@@ -83,7 +83,13 @@ liquibase {
 }
 
 jar {
-    enabled = false
+    manifest {
+        archiveFileName = "${project.name}-${project.version}.jar"
+        attributes(
+                'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
+                'Main-Class': 'org.crochet.CrochetApplication'
+        )
+    }
 }
 
 test {
