--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,17 +1,18 @@
-name: Build
+name: Build on Development
 
 on:
   push:
     branches:
-      - 'master'
+      - 'release'
+      - 'develop'
   pull_request:
     branches:
-      - 'master'
       - 'release'
       - 'develop'
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -26,6 +27,7 @@ jobs:
       - name: Gradle build
         env:
           env: dev
+          EMAIL: ${{ secrets.EMAIL }}
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
           DB_NAME: ${{ secrets.DB_NAME }}
@@ -39,4 +41,6 @@ jobs:
           PAYPAL_CLIENT_SECRET: ${{ secrets.PAYPAL_CLIENT_SECRET }}
         run: |
           chmod +x gradlew
-          ./gradlew build
+          ./gradlew preReleaseVersion
+          ./gradlew majorVersionUpdate
+          ./gradlew clean build
