--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: src/main/resources/db/migration/2024-05-03-add-token-blacklist.yaml
   - include:
       file: src/main/resources/db/migration/2024-05-12-remove-avatar-column-in-blog-table.yaml
+  - include:
+      file: src/main/resources/db/migration/2024-05-18-add-blog-category-table.yaml
