--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,11 @@ app:
       - https://tieuphuongcrochet.com/oauth2/redirect
       - crochetandroidapp://oauth2/redirect
       - crochetiosapp://oauth2/redirect
+  cors:
+    allowed-origins:
+      - http://localhost:3000
+      - https://tieuphuongcrochet.com
+      - https://fonts.googleapis.com
 
 authorize:
   http-request:
@@ -64,23 +69,3 @@ authorize:
       - "/users/**"
       - "/banner/batchInsertOrUpdate"
       - "/bannerType/**"
-    permit-all:
-      - "/"
-      - "/auth/**"
-      - "/oauth2/**"
-      - "/error"
-      - "/favicon.ico"
-      - "/*.png"
-      - "/*.gif"
-      - "/*.svg"
-      - "/*.jpg"
-      - "/*.html"
-      - "/*.css"
-      - "/*.js"
-      - "/swagger-ui/**"
-      - "/swagger-ui.html"
-      - "webjars/**"
-      - "/v3/api-docs/**"
-      - "/v3/api-docs"
-      - "/swagger-resources"
-      - "/swagger-resources/**"
