Fixing Security Requirement

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,3 +69,6 @@ authorize:
       - "/users/**"
       - "/banner/batchInsertOrUpdate"
       - "/bannerType/**"
+      - "/blog-categories/create"
+      - "/blog-categories/update"
+      - "/blog-categories/delete/**"
