--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: src/main/resources/db/migration/2024-05-12-remove-avatar-column-in-blog-table.yaml
   - include:
       file: src/main/resources/db/migration/2024-05-18-add-blog-category-table.yaml
+  - include:
+      file: src/main/resources/db/migration/2024-07-08-drop-unique-constraint-for-name.yaml
