--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
         format_sql: true
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://localhost:3306/testDB
+    url: jdbc:mysql://localhost:3306/testdb
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -15,5 +15,5 @@ spring:
     enabled: false
 
 redis:
-  host: localhost
+  host: 0.0.0.0
   port: 6379
