--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,3 +15,5 @@ databaseChangeLog:
       file: src/main/resources/db/migration/2024-07-11-create-settings-table.yaml
   - include:
       file: src/main/resources/db/migration/2024-09-04-add-status-for-pattern.yaml
+  - include:
+      file: src/main/resources/db/migration/2024-11-08-order-image.yaml
