--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+
+    implementation 'io.micrometer:micrometer-core:1.12.1'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.12.1'
+
     implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
 
     implementation 'com.mysql:mysql-connector-j:8.4.0'
     implementation 'org.liquibase:liquibase-core:4.27.0'
     implementation 'com.h2database:h2:2.2.224'
     implementation 'org.postgresql:postgresql:42.7.3'
-
-    implementation 'com.paypal.sdk:checkout-sdk:2.0.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
@@ -57,6 +61,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-admin:9.3.0'
 
     implementation 'redis.clients:jedis:5.1.3'
+
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
+    implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0'
+
+    implementation 'io.vavr:vavr:0.10.4'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.3.0'
