--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.3'
+    id 'org.springframework.boot' version '3.3.5'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'org.liquibase.gradle' version '2.2.1'
 }
@@ -57,6 +57,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-admin:9.3.0'
 
     implementation 'redis.clients:jedis:5.1.3'
+
+    implementation 'com.bucket4j:bucket4j-core:8.10.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:6.3.0'
